...
  const SearchPage({super.key});

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Cari Restoran'),
      ),
      body: Column(
        children: [
          // Search Bar
          Consumer<RestaurantProvider>(
            builder: (context, provider, child) {
...
